src/objects/ACETHippaCategoryRule__c.object
<CustomObject>
    <fields>
        <fullName>ACETHippaCategoryRuleExternalID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ACETHippaCategoryRuleExternalID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Caller_SubType__c</fullName>
        <label>Caller SubType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Personal Representative</fullName>
                </value>
                <value>
                    <fullName>Parent/Guardian/Custody Holder</fullName>
                </value>
                <value>
                    <fullName>Third Parties</fullName>
                </value>
                <value>
                    <fullName>Interpreter for member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caller_Type__c</fullName>
        <label>Caller Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dependent__c</fullName>
        <label>Dependent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adult Dependent</fullName>
                </value>
                <value>
                    <fullName>Minor Dependent</fullName>
                </value>
                <value>
                    <fullName>Self Dependent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General__c</fullName>
        <defaultValue>false</defaultValue>
        <label>General</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Age__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Enter 200 when Age is &quot;Not Applicable&quot;</description>
        <inlineHelpText>Enter 200 when Age is &quot;Not Applicable&quot;</inlineHelpText>
        <label>Maximum Age</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Min_Age__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Enter 0 when Age is &quot;Not Applicable&quot;</description>
        <inlineHelpText>Enter 0 when Age is &quot;Not Applicable&quot;</inlineHelpText>
        <label>Minimum Age</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sensitive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sensitive</label>
        <type>Checkbox</type>
    </fields>
    <label>ACET Hippa Category Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Caller_Type__c</columns>
        <columns>Caller_SubType__c</columns>
        <columns>Dependent__c</columns>
        <columns>Max_Age__c</columns>
        <columns>Min_Age__c</columns>
        <columns>General__c</columns>
        <columns>Medical__c</columns>
        <columns>Sensitive__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Rule-{000}</displayFormat>
        <label>ACET Hippa Category Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ACET Hippa Category Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>